Reservation/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: reservation
    spec:
      containers:
        - name: reservation-container
          image: yichingllin/reservation-docker
          ports:
            - containerPort: 8000
  selector:
    matchLabels:
      app: reservation
