Reservation/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
   name: reservation-service
spec:
   selector:
     app: reservation
   type: LoadBalancer
   ports:
     - name: reservation
       protocol: TCP
       port: 80
       targetPort: 8000
